Definicion de clases segun Ecmas e implementacion de callbacks

--- a/code/javascript/package.json
+++ b/code/javascript/package.json
@@ -4,9 +4,9 @@
   " description " : " Conceptos basicos de Javascript. " ,
   " main " : " index.html " ,
   " scripts " : {
-    " prueba " : " echo \" Error: no se especificó ninguna prueba \ "  &&  salida  1  "
+  " prueba " : " echo " Error: no se especificó ninguna prueba \ " &&  salida 1 "
   },
-  "  palabras  clave  " : [
+  " palabrasclave " : [
     "  javascript  " ,
     "  fundamentos  "
   ],
